# tap-mailchimp

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  test.yaml  test.yml
tap_mailchimp/: __init__.py  client.py  streams.py  tap.py
tests/: test_core.py
