[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "tap-mailchimp"
version = "0.0.1"
description = "Singer tap for Mailchimp, built with the Meltano SDK for Singer Taps."
keywords = [
  "ELT",
  "Mailchimp",
]
license = "Apache-2.0"
authors = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests~=2.32.4",
  "requests-cache==1.2.*",
  "singer-sdk==0.50.*",
  "toolz==1.0.*",
  "typing-extensions>=4.14.1; python_full_version<'3.12'",
]

scripts.tap-mailchimp = "tap_mailchimp.tap:TapMailchimp.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "pytest~=8.4",
  "pytest-github-actions-annotate-failures>=0.3",
]
typing = [
  "mypy>=1.17.1",
  "ty>=0.0.1a17",
  "types-requests>=2.32.4.20250809",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = [ "tap_mailchimp", "tests" ]
lint.select = [ "ALL" ]
lint.ignore = [ "DJ", "PD" ]
lint.per-file-ignores."tests/*" = [ "ANN" ]
lint.isort.known-first-party = [ "tap_mailchimp" ]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.mypy]
enable_error_code = [
  "exhaustive-match",
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "toolz.*", # https://github.com/pytoolz/toolz/issues/496
]

[tool.tox]
min_version = "4.22"
requires = [
  "tox~=4.22",
  "tox-uv~=1.17",
]
env_list = [
  "dependencies",
  "typing",
  "3.14",
  "3.13",
  "3.12",
  "3.11",
  "3.10",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_MAILCHIMP_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]

[tool.tox.env.sync]
commands = [ [ "tap-mailchimp", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_mailchimp", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_mailchimp", "tests" ], extend = true } ],
]
