[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "tap-mailchimp"
description = "Singer tap for Mailchimp, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Mailchimp",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "requests~=2.34.0",
  "requests-cache~=1.3.2",
  "singer-sdk~=0.54.2",
  "toolz~=1.1.0",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-mailchimp = "tap_mailchimp.tap:TapMailchimp.cli"

[dependency-groups]
dev = [
  "deptry>=0.25",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "pytest~=9.0",
  "pytest-github-actions-annotate-failures>=0.3",
]
typing = [
  "mypy>=2.1",
  "toolz-stubs>=0.4",
  "ty>=0.0.50",
  { include-group = "testing" },
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "DJ",
  "PD",
]
per-file-ignores."tests/*" = [
  "ANN",
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
  "exhaustive-match",
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unused_configs = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [ "-v", "-ra" ]
filterwarnings = [
  "error",
  "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [
  "tox>=4.53",
  "tox-uv>=1.35",
]
env_list = [
  "dependencies",
  "typing",
  { prefix = "3.", start = 12 },
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "dev" ]
commands = [ [ "deptry", "." ] ]
labels = [ "check" ]
[tool.tox.env.sync]
description = "run tap with sample data"
base_python_file = [ ".python-version" ]
commands = [ [ "tap-mailchimp", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_mailchimp", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_mailchimp", "tests" ], extend = true } ],
]
labels = [ "check" ]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run tests on Python {py_dot_ver}"
dependency_groups = [ "testing" ]
pass_env = [ "TAP_MAILCHIMP_*" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
